[gd_scene load_steps=3 format=3 uid="uid://bhuaw5k7xsl4i"]

[ext_resource type="Script" path="res://test/interactive/tree_test/test_tree_control.gd" id="1_wp26p"]
[ext_resource type="PackedScene" uid="uid://tkp4i7e1fs5" path="res://addons/cyclops_level_builder/docks/material_palette/material_viewer/line_input.tscn" id="2_q2qc1"]

[node name="Tree" type="Tree"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
drop_mode_flags = 3
select_mode = 1
script = ExtResource("1_wp26p")

[node name="PopupMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 2
item_0/text = "New"
item_0/id = 0
item_1/text = "Delete"
item_1/id = 1

[node name="LineInput" parent="." instance=ExtResource("2_q2qc1")]
unique_name_in_owner = true
title = "Tier Name"
visible = false
text = "Tier Name"

[connection signal="item_edited" from="." to="." method="_on_item_edited"]
[connection signal="item_selected" from="." to="." method="_on_item_selected"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
